# my-swiss-army-knife

./: .gitignore  AGENTS.md  README.md
apps/datetime-calculator/: AGENTS.md  README.md  datetime_calculator.py  pyproject.toml
apps/datetime-calculator/docs/: specs.md
apps/datetime-calculator/tests/: test_main.py
apps/google-sheets-merger/: AGENTS.md  README.md  main.py  pyproject.toml
apps/google-sheets-merger/docs/: spec.md
