[project]
name = "google-sheets-merger"
version = "0.1.0"
description = "Merge multiple Google Sheets into a single destination spreadsheet."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "gspread>=6.2.1",
    "pandas>=3.0.3",
]

[project.scripts]
gs-merge = "main:main"

[tool.uv]
package = true
